Added finishes to 02 Lesson

--- a/foundations/02-class-id-selectors/index.html
+++ b/foundations/02-class-id-selectors/index.html
@@ -8,10 +8,17 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <p>Number 1 - I'm a class!</p>
-    <div>Number 2 - I'm one ID.</div>
-    <p>Number 3 - I'm a class, but cooler!</p>
-    <div>Number 4 - I'm another ID.</div>
-    <p>Number 5 - I'm a class!</p>
+    <p class="class">Number 1 - I'm a class!</p>
+    <div id="id1">Number 2 - I'm one ID.</div>
+    <p class="class big-font">Number 3 - I'm a class, but cooler!</p>
+    <div id="id2" class="big-font">Number 4 - I'm another ID.</div>
+    <p class="class">Number 5 - I'm a class!</p>
+    <!--
+      1. Class
+      2. Unique ID1
+      3. Class and Another Class
+      4. Unique ID2
+      5. Class
+     -->
   </body>
 </html>
